Fix hide border bug in expand collapse  (#1201)
* fix

* fix snapshots

--- a/src/components/ExpandCollapse/styles.module.scss
+++ b/src/components/ExpandCollapse/styles.module.scss
@@ -1,6 +1,9 @@
 .hideBorder {
   border: none;
 }
+.showBorder {
+  border: 1px solid var(--ui-border-color);
+}
 
 .hideBorderBottom {
   border-bottom: none;
